[project]
name = "mderank"
version = "0.1.0"
description = "Library for MDERANK"
authors = [{ name = "Pablo Calleja" }]
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "spacy==3.7.4",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "matplotlib==3.9.4",
    "pandas==1.5.3",
    "StanfordCoreNLP==3.9.1.1",
    "transformers==4.37.2",
    "accelerate==0.5.1",
    "typing==3.7.4.3"

]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mderank"]
